corrected breakpoints in home page and review page to be more fluid still needs work on mobile view

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -21,6 +21,12 @@ body {
     width: 225px !important;
 }
 
+@media(min-width:768px) {
+    body {
+        background-size: 100% 100% !important;
+        background-repeat: no-repeat !important;
+    }
+}
 
 
 
